2012-08-20 josephgbr <rafael.f.f1@gmail.com>

    * 5388-1 :
	Updated to latest upstream revision (note: after stable version 1.0.0)
	
	* options :
	Added '!strip', to keep debug symbols since we're building debug type. But
	this can be disabled as well as BUILD_TYPE can be set to "Release".
	
	* build() :
	Avoid building GSnull and SPU2null. Some PCSX2 users (not specifically Arch)
	reported selecting GSnull by mistake (which won't display game's graphic).
	No big issue, anyway.
	
2012-05-07 josephgbr <rafael.f.f1@gmail.com>

    * 5201-1 :
	Updated to latest upstream revision
	
	* build() :
	Defined new variable GLSL_SHADER_DIR
	
2012-04-23 josephgbr <rafael.f.f1@gmail.com>

    * 5187-1 :
	Updated to latest upstream revision
	
	* build() :
	Removed deprecated "-DFORCE_INTERNAL_SDL=TRUE", as GSdx now uses OpenGL
	
	* package() :
	Removed workaround to fix man page name - not needed anymore
	
2012-03-06 josephgbr <rafael.f.f1@gmail.com>

	* 5121-1 :
	Updated to latest upstream revision
	
	* build() :
	Sparsehash fixed in r5117 and therefore removed fix for its include dir
	
2011-02-13 josephgbr <rafael.f.f1@gmail.com>

	* 5093-1 :
	Updated to latest upstream revision
	
	* makedepends() :
	Renamed 'google-sparsehash' as 'sparsehash'
	
	* build() :
	Add fix for new include dir (changed from /usr/include/google/sparsehash/*
	to /usr/include/sparsehash/* without correct backward compatibility).
	Used 'sed' for this fix, so won't impact this auto-update package if PCSX2
	upstream fix on their source code.
	

2011-02-11 josephgbr <rafael.f.f1@gmail.com>

	* 5093-1 :
	Updated to latest upstream revision

	* depends :
	Added {lib32-}libgl.
	
	
2011-12-24 josephgbr <rafael.f.f1@gmail.com>

	* 5015-1 :
	Updated to latest upstream revision
	
	* depends :
	Moved {lib32-}gtk-engines from optdepends to depends, so user will
	always have a slightly better graphic interface experience.
	
	* package() :
	Fixed man page name format. Upstream delivers it in a file name that