@@ -10,10 +10,10 @@ license="custom"
 arch=('i686' 'x86_64')
 
 if [ $CARCH == i686 ]; then
-  depends=('zlib' 'sdl' 'libgl')
+  depends=('zlib' 'sdl' 'mesa-libgl')
   makedepends=('nasm')
 elif [ $CARCH == x86_64 ]; then
-  depends=('lib32-zlib' 'lib32-sdl' 'lib32-libgl')
+  depends=('lib32-zlib' 'lib32-sdl' 'lib32-mesa-libgl')
   makedepends=('nasm' 'gcc-multilib')
 fi
 
