@@ -11,7 +11,7 @@ arch=('x86_64')
 url="http://www.remotesensing.org/libtiff/"
 license=('custom')
 depends=('lib32-libjpeg' 'lib32-zlib' "${_pkgbase}3")
-makedepends=('lib32-libgl' 'lib32-libxmu' 'lib32-libxi' 'gcc-multilib')
+makedepends=('lib32-mesa-libgl' 'lib32-libxmu' 'lib32-libxi' 'gcc-multilib')
 options=('!libtool')
 source=(ftp://ftp.remotesensing.org/pub/libtiff/tiff-${pkgver}.tar.gz)
 md5sums=('8fc7ce3b4e1d0cc8a319336967815084')
