@@ -9,7 +9,7 @@ arch=('i686' 'x86_64')
 url="http://www.remotesensing.org/libtiff/"
 license=('custom')
 depends=('libjpeg' 'zlib' 'libtiff')
-makedepends=('libgl' 'freeglut' 'libxmu' 'libxi' )
+makedepends=('mesa-libgl' 'freeglut' 'libxmu' 'libxi' )
 optdepends=('freeglut: for using tiffgt')
 options=('!libtool')
 source=(ftp://ftp.remotesensing.org/pub/libtiff/tiff-${pkgver}.tar.gz)
