@@ -5,7 +5,7 @@
 # with "Release" in the line '-DCMAKE_BUILD_TYPE=' below
 
 pkgname=pcsx2-svn
-pkgver=5492
+pkgver=5576
 pkgrel=1
 pkgdesc="A PlayStation 2 emulator."
 arch=('i686' 'x86_64')
@@ -13,12 +13,12 @@ url="http://www.pcsx2.net"
 license=('GPL3')
 if [ $CARCH == i686 ]; then
     depends=('bzip2' 'wxgtk' 'nvidia-cg-toolkit' 'glew' 'portaudio'
-             'libgl' 'alsa-lib' 'libjpeg-turbo' 'soundtouch'
+             'mesa-libgl' 'alsa-lib' 'libjpeg-turbo' 'soundtouch'
              'gtk-engines' 'sdl' 'libaio')
     makedepends=('cmake' 'subversion' 'sparsehash')
 elif [ $CARCH == x86_64 ]; then
     depends=('lib32-bzip2' 'lib32-wxgtk' 'lib32-nvidia-cg-toolkit'
-             'lib32-libgl' 'lib32-glew' 'lib32-libjpeg-turbo'
+             'lib32-mesa-libgl' 'lib32-glew' 'lib32-libjpeg-turbo'
              'lib32-portaudio' 'lib32-alsa-lib' 'lib32-soundtouch'
              'lib32-gtk-engines' 'lib32-sdl' 'lib32-libaio')
     makedepends=('cmake' 'subversion' 'sparsehash' 'gcc-multilib')
