@@ -7,7 +7,7 @@ pkgdesc="Secret Maryo Chronicles"
 arch=('i686' 'x86_64')
 url="http://www.secretmaryo.org"
 license=('GPL3')
-depends=('sdl_image' 'sdl_ttf' 'sdl_mixer' 'cegui' 'boost-libs' 'libgl' 'gcc-libs')
+depends=('sdl_image' 'sdl_ttf' 'sdl_mixer' 'cegui' 'boost-libs' 'mesa-libgl' 'gcc-libs')
 makedepends=('autoconf' 'automake' 'boost' 'git')
 conflicts=('smc' 'smc-data')
 provides=('smc' 'smc-data')
